--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "test-task-orgs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://ildusgaf.github.io/test-task-orgs",
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -15,6 +16,7 @@
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
     "dayjs": "^1.11.13",
+    "gh-pages": "^6.1.1",
     "mobx": "^6.13.2",
     "mobx-react-lite": "^4.0.7",
     "mobx-state-tree": "^6.0.1",
@@ -29,14 +31,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
